Adicionado texto informando Perimetro Seguro

--- a/PTI PETMonitor/index.html
+++ b/PTI PETMonitor/index.html
@@ -53,10 +53,10 @@
 			<form class="locPet" method="POST">
 				<ul>
 					<li>
-						<input type="text" id="nomepet" maxlength="12" name="nomepet" placeholder="Nome do animal" autocomplete="off" maxlength="12" >
+						<input type="text" id="nomepet" maxlength="12" name="nomepet" placeholder="Nome do animal" autocomplete="off" maxlength="12" required="required" >
 					</li>
 					<li>
-						<input type="text" id="raca" maxlength="12" name="raca" placeholder="Raça:" autocomplete="off" maxlength="12" >
+						<input type="text" id="raca" maxlength="12" name="raca" placeholder="Raça:" autocomplete="off" maxlength="12" required="required" >
 					</li>
 					<li class="raca">
 						<!--Macho -->
